crates/takusu-agent/tests/snapshots/schema_snapshots__tool_delete_task.snap
---
source: crates/takusu-agent/tests/schema_snapshots.rs
expression: def
---
{
  "function": {
    "description": "Create a task deletion proposal.",
    "name": "delete_task",
    "parameters": {
      "additionalProperties": false,
      "properties": {
        "proposal_id": {
          "description": "Optional proposal id. Set the same value across multiple related tool calls to group them into a single proposal for review.",
          "type": "string"
        },
        "task_ref": {
          "type": "string"
        },
        "warnings": {
          "items": {
            "type": "string"
          },
          "type": "array"
        },
        "why": {
          "description": "Short user-facing reason for the proposed change.",
          "type": "string"
        }
      },
      "required": [
        "task_ref"
      ],
      "type": "object"
    }
  },
  "type": "function"
}
