crates/takusu-agent/tests/snapshots/schema_snapshots__tool_generate_schedule.snap
---
source: crates/takusu-agent/tests/schema_snapshots.rs
expression: def
---
{
  "function": {
    "description": "Create a schedule generation proposal.",
    "name": "generate_schedule",
    "parameters": {
      "additionalProperties": false,
      "properties": {
        "proposal_id": {
          "description": "Optional proposal id. Set the same value across multiple related tool calls to group them into a single proposal for review.",
          "type": "string"
        },
        "sleep": {
          "type": "string"
        },
        "task_ids": {
          "items": {
            "type": "string"
          },
          "type": "array"
        },
        "warnings": {
          "items": {
            "type": "string"
          },
          "type": "array"
        },
        "why": {
          "description": "Short user-facing reason for the proposed change.",
          "type": "string"
        }
      },
      "required": [],
      "type": "object"
    }
  },
  "type": "function"
}
